--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^5.10.2",
+    "axios": "^1.6.7",
     "next": "14.1.3",
+    "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
