--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.35.5",
     "axios": "^1.6.7",
     "dayjs": "^1.11.11",
+    "googleapis": "^137.1.0",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "nookies": "^2.5.2",
